/*
 * This file was generated by the Gradle 'init' task.
 *
 * This generated file contains a sample Java application project to get you started.
 * For more details on building Java & JVM projects, please refer to https://docs.gradle.org/9.4.1/userguide/building_java_projects.html in the Gradle documentation.
 */

plugins {
    // Apply the application plugin to add support for building a CLI application in Java.
    id 'application'
    id("com.gradleup.shadow") version "9.4.1"
}

repositories {
    // Use Maven Central for resolving dependencies.
    mavenCentral()
}

dependencies {
    // Use JUnit Jupiter for testing.
    testImplementation libs.junit.jupiter

    testRuntimeOnly 'org.junit.platform:junit-platform-launcher'

    // This dependency is used by the application.
    implementation libs.guava

    implementation 'com.formdev:flatlaf:3.7.1'


    implementation "net.java.dev.jna:jna:5.13.0"
    implementation "net.java.dev.jna:jna-platform:5.13.0"

    constraints {
        implementation('org.codehaus.plexus:plexus-utils:4.0.3') {
            because 'fix Directory Traversal vulnerability (CVE-2025-67030)'
        }
        implementation('org.apache.logging.log4j:log4j-core:2.25.4') {
            because 'fix XML sanitization vulnerability (CVE-2026-34480)'
        }
    }
}

// Apply a specific Java toolchain to ease working on different environments.
java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(17)
    }
}

application {
    // Define the main class for the application.
    mainClass = 'TerrariaLauncher.TerrariaLauncher'
}

tasks.named('test') {
    // Use JUnit Platform for unit tests.
    useJUnitPlatform()
}

def versionStr = System.getenv("APP_VERSION") ?: "1.0.0"

jar {
    manifest {
        attributes(
            'Implementation-Version': versionStr,
            'Main-Class': 'TerrariaLauncher.TerrariaLauncher'
        )
    }
}